--- a/pages/cotizador.html
+++ b/pages/cotizador.html
@@ -1,105 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cotizador</title>
-    <link rel="stylesheet" href="../css/styles.css" />
-  </head>
 
-  <body>
-    <header>
-      <div class="logo">
-        <a href="../index.html" aria-label="Home">
-            <img src="../media/images/logo.png" alt="Logo" id="logo" />
-            <h1>Patricio Gallo</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cotizador</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/styles.css" />
+</head>
+
+<body>
+  <header class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+      <div class="logoyh1">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../media/images/logo.png" class="logo" alt="Logo de Patricio Gallo">
+          <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
         </a>
       </div>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="./about.html">Acerca de mí</a></li>
-          <li><a href="./segper.html">Seguros personas</a></li>
-          <li><a href="./segemp.html">Seguros empresas</a></li>
-          <li><a href="./autogestion.html">Autogestión</a></li>
-        </ul>
-      </nav>
-      <div class="menu-icon">&#9776;</div>
-    </header>
-    <hr>
-    <main>
-      <section class="portada ">
-        <h2>¿Qué querés asegurar?</h2>
-        <div class="elementos-cotizables">
-          <div class="auto-span2">
-            <a href="./cotizadores/vehic.html">
-              <img src="../media/images/auto.png" alt="Cotizar seguro de vehículo particular">
-              <h5>Vehículo particular</h5>
-            </a>
-          </div>
-          <div>
-            <a href="./cotizadores/vida.html">
-              <img src="../media/images/vida.png" alt="Cotizar seguro de vida y ahorro">
-              <h5>Seguros de vida y ahorro</h5>
-            </a>
-          </div>
-
-          <div>
-            <a href="./cotizadores/accpers.html">
-              <img src="../media/images/accidentes.png" alt="Cotizar seguro de accidentes personales">
-              <h5>Accidentes personales</h5>
-            </a>
-          </div>
-
-          <div>
-            <a href="./cotizadores/rcprofesional.html">
-              <img src="../media/images/profesional.png" alt="Cotizar seguro de RC Profesional">
-              <h5>Responsabilidad Civil Profesional</h5>
-            </a>
-          </div>
-
-          <div>
-            <a href="./cotizadores/hogar.html">
-              <img src="../media/images/hogar.png" alt="Cotizar seguro de hogar">
-              <h5>Hogar</h5>
-            </a>
-          </div>
-        </div>
-      </section>
-      <div>
-        <a href="https://wa.me/5493815906102" target="_blank"
-          ><img
-            src="../media/images/whatsapp.png"
-            alt="Ir a Whatsapp"
-            class="boton-wsp"
-        /></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./about.html">Quiénes somos</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="./autogestion.html">Siniestros</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Cotizá tu seguro
+              </a>
+              <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./cotizadores/vehic.html">Vehículo</a></li>
+                  <li><a class="dropdown-item" href="./cotizadores/vida.html">Vida y capitalización</a></li>
+                  <li><a class="dropdown-item" href="./cotizador.html">Otro tipo de seguro</a></li>
+              </ul>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+          </li>
+      </ul>
       </div>
-    </main>
+    </div>
+  </header>
+  <main>
+    <section class="portada ">
+      <h2>¿Qué querés asegurar?</h2>
+      <div class="elementos-cotizables">
+        <div class="auto-span2">
+          <a href="./cotizadores/vehic.html">
+            <img src="../media/images/auto.png" alt="Cotizar seguro de vehículo particular">
+            <h5>Vehículo particular</h5>
+          </a>
+        </div>
+        <div>
+          <a href="./cotizadores/vida.html">
+            <img src="../media/images/vida.png" alt="Cotizar seguro de vida y ahorro">
+            <h5>Seguros de vida y ahorro</h5>
+          </a>
+        </div>
+
+        <div>
+          <a href="./cotizadores/accpers.html">
+            <img src="../media/images/accidentes.png" alt="Cotizar seguro de accidentes personales">
+            <h5>Accidentes personales</h5>
+          </a>
+        </div>
+
+        <div>
+          <a href="./cotizadores/rcprofesional.html">
+            <img src="../media/images/profesional.png" alt="Cotizar seguro de RC Profesional">
+            <h5>Responsabilidad Civil Profesional</h5>
+          </a>
+        </div>
+
+        <div>
+          <a href="./cotizadores/hogar.html">
+            <img src="../media/images/hogar.png" alt="Cotizar seguro de hogar">
+            <h5>Hogar</h5>
+          </a>
+        </div>
+      </div>
+    </section>
+    <div>
+      <a href="https://wa.me/5493815906102" target="_blank"><img src="../media/images/whatsapp.png" alt="Ir a Whatsapp"
+          class="boton-wsp" /></a>
+    </div>
+  </main>
+  <hr />
+  <footer>
+    <section class="foot-2">
+      <div>
+        N° de matrícula SSN <br />
+        94338
+      </div>
+      <div>Servicio de Atención al asegurado</div>
+      <div>Departamento de orientación y asistencia</div>
+      <div>
+        <a href="https://www.argentina.gob.ar/superintendencia-de-seguros" target="_blank">www.argentina.gob.ar/ssn</a>
+      </div>
+      <div>
+        <img src="../media/images/logo-ssn.png" alt="logo ssn" />
+      </div>
+    </section>
     <hr />
-    <footer>
-      <section class="foot-2">
-          <div>
-              N° de matrícula SSN <br />
-              94338
-          </div>
-          <div>Servicio de Atención al asegurado</div>
-          <div>Departamento de orientación y asistencia</div>
-          <div>
-              <a href="https://www.argentina.gob.ar/superintendencia-de-seguros"
-                  target="_blank">www.argentina.gob.ar/ssn</a>
-          </div>
-          <div>
-              <img src="../media/images/logo-ssn.png" alt="logo ssn" />
-          </div>
-      </section>
-      <hr />
-      <section class="foot-3">
-          <div class="copirig">
-              <img src="../media/images/logo-footer.png" alt="Logo" id="logo" />
-              <span>Copyright © 2023 Patricio Gallo</span>
-          </div>
-          <span>Powered by PG</span>
-      </section>
+    <section class="foot-3">
+      <div class="copirig">
+        <img src="../media/images/logo-footer.png" alt="Logo" id="logo" />
+        <span>Copyright © 2023 Patricio Gallo</span>
+      </div>
+      <span>Powered by PG</span>
+    </section>
   </footer>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+
+</body>
+
 </html>
