--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
           <div class="logoyh1">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand enlace" href="#">
                   <img src="./media/images/logo.png" class="logo" alt="Logo de Patricio Gallo">
                   <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
               </a>
@@ -26,24 +26,24 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="./pages/about.html">Quiénes somos</a>
+                      <a class="nav-link enlace" aria-current="page" href="./pages/about.html">Quiénes somos</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/autogestion.html">Siniestros</a>
+                      <a class="nav-link  enlace" href="./pages/autogestion.html">Siniestros</a>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                      <a class="nav-link dropdown-toggle  enlace" href="#" role="button" data-bs-toggle="dropdown"
                           aria-expanded="false">
                           Cotizá tu seguro
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="./pages/cotizadores/vehic.html">Vehículo</a></li>
-                          <li><a class="dropdown-item" href="./pages/cotizadores/vida.html">Vida y capitalización</a></li>
-                          <li><a class="dropdown-item" href="./pages/cotizador.html">Otro tipo de seguro</a></li>
+                          <li><a class="dropdown-item  enlace" href="./pages/cotizadores/vehic.html">Vehículo</a></li>
+                          <li><a class="dropdown-item  enlace" href="./pages/cotizadores/vida.html">Vida y capitalización</a></li>
+                          <li><a class="dropdown-item  enlace" href="./pages/cotizador.html">Otro tipo de seguro</a></li>
                       </ul>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                      <a class="nav-link  enlace" href="./pages/contacto.html">Contacto</a>
                   </li>
               </ul>
           </div>
