--- a/pages/autogestion.html
+++ b/pages/autogestion.html
@@ -14,7 +14,7 @@
     <header class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <div class="logoyh1">
-                <a class="navbar-brand" href="../index.html">
+                <a class="navbar-brand enlace" href="../index.html">
                     <img src="../media/images/logo.png" class="logo" alt="Logo de Patricio Gallo">
                     <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
                 </a>
@@ -26,24 +26,24 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./about.html">Quiénes somos</a>
+                        <a class="nav-link enlace" aria-current="page" href="./about.html">Quiénes somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./autogestion.html">Siniestros</a>
+                        <a class="nav-link enlace" href="./autogestion.html">Siniestros</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle enlace" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Cotizá tu seguro
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./cotizadores/vehic.html">Vehículo</a></li>
-                            <li><a class="dropdown-item" href="./cotizadores/vida.html">Vida y capitalización</a></li>
-                            <li><a class="dropdown-item" href="./cotizador.html">Otro tipo de seguro</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizadores/vehic.html">Vehículo</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizador.html">Otro tipo de seguro</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                        <a class="nav-link enlace" href="./contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -60,38 +60,38 @@
                     <h4>Formulario de Siniestros</h4>
                     <form action="/procesar-siniestro" method="post" enctype="multipart/form-data"
                         class="formulario siniestros">
-                        <div class="label">
-                            <label for="fecha">Fecha del Siniestro (obligatorio)</label>
-                            <input type="date" id="fecha" name="fecha" required>
+                        <div class="mb-3">
+                            <label for="fecha" class="form-label">Fecha del Siniestro (obligatorio)</label>
+                            <input class="form-control" type="date" id="fecha" name="fecha" required>
                         </div>
-                        <div class="label">
-                            <label for="hora">Hora del Siniestro (obligatorio)</label>
-                            <input type="time" id="hora" name="hora" required>
+                        <div class="mb-3">
+                            <label for="hora" class="form-label">Hora del Siniestro (obligatorio)</label>
+                            <input class="form-control" type="time" id="hora" name="hora" required>
                         </div>
-                        <div class="label">
-                            <label for="lugar">Lugar del Siniestro (obligatorio)</label>
-                            <input type="text" id="lugar" name="lugar" required>
+                        <div class="mb-3">
+                            <label for="lugar" class="form-label">Lugar del Siniestro (obligatorio)</label>
+                            <input class="form-control" type="text" id="lugar" name="lugar" required>
                         </div>
-                        <div class="label">
-                            <label for="forma_ocurrencia">Forma de Ocurrencia (obligatorio)</label>
-                            <textarea id="forma_ocurrencia" name="forma_ocurrencia" rows="4" required></textarea>
+                        <divdiv class="mb-3">
+                            <label for="forma_ocurrencia" class="form-label">Forma de Ocurrencia (obligatorio)</label>
+                            <textarea class="form-control" id="forma_ocurrencia" name="forma_ocurrencia" rows="3" required></textarea>
                         </div>
                     </form>
                 </div>
                 <div>
                     <h5>Información del Asegurado</h5>
-                    <form action="/procesar-siniestro" method="post" enctype="multipart/form-data" class="formulario">
-                        <div class="label">
-                            <label for="cedula">Foto de la Cédula de Identificación Vehicular (obligatorio)</label>
-                            <input type="file" id="cedula" name="cedula" accept="image/*" required>
+                    <form action="/procesar-siniestro" method="post" enctype="multipart/form-data">
+                        <div class="mb-3">
+                            <label for="cedula" class="form-label">Foto de la Cédula de Identificación Vehicular (obligatorio)</label>
+                            <input class="form-control"  type="file" id="cedula" name="cedula" accept="image/*" required>
                         </div>
-                        <div class="label">
-                            <label for="carnet_manejo">Foto del Carnet de Manejo (obligatorio)</label>
-                            <input type="file" id="carnet_manejo" name="carnet_manejo" accept="image/*" required>
+                        <div class="mb-3">
+                            <label for="carnet_manejo" class="form-label">Foto del Carnet de Manejo (obligatorio)</label>
+                            <input class="form-control"  type="file" id="carnet_manejo" name="carnet_manejo" accept="image/*" required>
                         </div>
-                        <div class="label">
-                            <label for="fotos_auto">Fotos del Auto Asegurado (obligatorio)</label>
-                            <input type="file" id="fotos_auto" name="fotos_auto[]" accept="image/*" multiple required>
+                        <div class="mb-3">
+                            <label for="fotos_auto" class="form-label">Fotos del Auto Asegurado (obligatorio)</label>
+                            <input class="form-control"  type="file" id="fotos_auto" name="fotos_auto[]" accept="image/*" multiple required>
                         </div>
                     </form>
                 </div>
@@ -99,21 +99,21 @@
                     <h5>Información del Tercero (opcional)</h5>
                     <form action="/procesar-siniestro" method="post" enctype="multipart/form-data"
                         class="formulario siniestros">
-                        <div class="label">
-                            <label for="patente_tercero">Número de Patente</label>
-                            <input type="text" id="patente_tercero" name="patente_tercero">
+                        <div class="mb-3">
+                            <label for="patente_tercero" class="form-label">Número de Patente</label>
+                            <input class="form-control" type="text" id="patente_tercero" name="patente_tercero">
                         </div>
-                        <div class="label">
-                            <label for="aseguradora_tercero">Compañía Aseguradora</label>
-                            <input type="text" id="aseguradora_tercero" name="aseguradora_tercero">
+                        <div class="mb-3">
+                            <label for="aseguradora_tercero" class="form-label">Compañía Aseguradora</label>
+                            <input class="form-control" type="text" id="aseguradora_tercero" name="aseguradora_tercero">
                         </div>
-                        <div class="label">
-                            <label for="poliza_tercero">Número de Póliza</label>
-                            <input type="text" id="poliza_tercero" name="poliza_tercero">
+                        <div class="mb-3">
+                            <label for="poliza_tercero" class="form-label">Número de Póliza</label>
+                            <input class="form-control" type="text" id="poliza_tercero" name="poliza_tercero">
                         </div>
-                        <div class="label">
-                            <label for="conductor_tercero">Conductor tercero</label>
-                            <input type="text" id="conductor_tercero" name="conductor_tercero">
+                        <div class="mb-3">
+                            <label for="conductor_tercero" class="form-label">Conductor tercero</label>
+                            <input class="form-control" type="text" id="conductor_tercero" name="conductor_tercero">
                         </div>
                     </form>
                 </div>
