--- a/pages/cotizadores/vida.html
+++ b/pages/cotizadores/vida.html
@@ -14,7 +14,7 @@
     <header class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <div class="logoyh1">
-                <a class="navbar-brand" href="../../index.html">
+                <a class="navbar-brand enlace" href="../../index.html">
                     <img src="../../media/images/logo.png" class="logo" alt="Logo de Patricio Gallo">
                     <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
                 </a>
@@ -26,24 +26,24 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../about.html">Quiénes somos</a>
+                        <a class="nav-link enlace" aria-current="page" href="../about.html">Quiénes somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../autogestion.html">Siniestros</a>
+                        <a class="nav-link enlace" href="../autogestion.html">Siniestros</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle enlace" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Cotizá tu seguro
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../cotizadores/vehic.html">Vehículo</a></li>
-                            <li><a class="dropdown-item" href="../cotizadores/vida.html">Vida y capitalización</a></li>
-                            <li><a class="dropdown-item" href="../cotizador.html">Otro tipo de seguro</a></li>
+                            <li><a class="dropdown-item enlace" href="../cotizadores/vehic.html">Vehículo</a></li>
+                            <li><a class="dropdown-item enlace" href="../cotizadores/vida.html">Vida y capitalización</a></li>
+                            <li><a class="dropdown-item enlace" href="../cotizador.html">Otro tipo de seguro</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../contacto.html">Contacto</a>
+                        <a class="nav-link enlace" href="../contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -57,28 +57,28 @@
                 <h5>Sobre tu profesión...</h5>
 
                 <form action="" class="formulario">
-                    <div class="label">
-                        <label for="actividad">Actividad</label>
-                        <input type="text" id="actividad">
+                    <div class="mb-3">
+                        <label for="actividad" class="form-label">Actividad</label>
+                        <input type="text" id="actividad" class="form-control">
                     </div>
-                    <div class="label">
-                        <label for="cantidad-personas-ap">Cantidad de personas aseguradas</label>
-                        <input type="number" id="cantidad-personas-ap">
+                    <div class="mb-3">
+                        <label for="cantidad-personas-ap" class="form-label">Cantidad de personas aseguradas</label>
+                        <input type="number" id="cantidad-personas-ap" class="form-control">
                     </div>
                 </form>
                 <h5>Sobre vos...</h5>
                 <form action="" class="formulario">
-                    <div class="label">
-                        <label for="tel">Teléfono</label>
-                        <input type="tel" id="tel">
+                    <div class="mb-3">
+                        <label for="tel" class="form-label">Teléfono</label>
+                        <input type="tel" id="tel" class="form-control">
                     </div>
-                    <div class="label">
-                        <label for="mail">Email</label>
-                        <input type="email" id="mail">
+                    <div class="mb-3">
+                        <label for="mail" class="form-label">Email</label>
+                        <input type="email" id="mail" class="form-control">
                     </div>
-                    <div class="label">
-                        <label for="provincia">Provincia</label>
-                        <select name="" id="provincia">
+                    <div class="mb-3">
+                        <label for="provincia" class="form-label">Provincia</label>
+                        <select name="" id="provincia" class="form-control">
                             <option value="">Tucumán</option>
                             <option value="">Buenos Aires</option>
                             <option value="">CABA</option>
