Se aplican correcciones a formularios

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <h1 class="fs-2 fw-bold">Patricio Gallo</h1>
               </a>
           </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          <button class="navbar-toggler botonmenu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
               aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -79,7 +79,6 @@
               </div>
             </a>
           </div>
-
           <div>
             <a href="#servicios">
               <div class="boton sabermas">
@@ -91,6 +90,7 @@
       </article>
       <img class="image-patricio" src="./media/images/patricio-gallo.png" alt="Patricio Gallo" />
     </section>
+    <hr>
 
     <section class="servicios" id="servicios">
       <h2>Servicios</h2>
@@ -176,7 +176,7 @@
       </div>
        -->
     </section>
-
+<hr>
     <section class="aprende">
       <h2>Aprendé cómo</h2>
       <h3>podés cuidar lo que más querés</h3>
