--- a/pages/cotizadores/vehic.html
+++ b/pages/cotizadores/vehic.html
@@ -51,8 +51,7 @@
     </header>
     <main>
         <section class="portada">
-
-            <div class="formularios">
+            <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Datos de tu vehículo...</h5>
                 <form action="" class="formulario">
@@ -139,7 +138,7 @@
                     target="_blank">www.argentina.gob.ar/ssn</a>
             </div>
             <div>
-                <img src="../media/images/logo-ssn.png" alt="logo ssn" />
+                <img src="../../media/images/logo-ssn.png" alt="logo ssn" />
             </div>
         </section>
         <hr />
