--- a/pages/cotizadores/vida.html
+++ b/pages/cotizadores/vida.html
@@ -52,7 +52,7 @@
     <main>
 
         <section class="portada">
-            <div class="formularios">
+            <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Sobre tu profesión...</h5>
 
@@ -134,7 +134,7 @@
                     target="_blank">www.argentina.gob.ar/ssn</a>
             </div>
             <div>
-                <img src="../media/images/logo-ssn.png" alt="logo ssn" />
+                <img src="../../media/images/logo-ssn.png" alt="logo ssn" />
             </div>
         </section>
         <hr>
