--- a/pages/reunion.html
+++ b/pages/reunion.html
@@ -54,7 +54,7 @@
             <a href="https://wa.me/5493815906102" target="_blank"><img src="../media/images/whatsapp.png"
                     alt="Ir a Whatsapp" class="boton-wsp"></a>
         </div>
-        <section class="aprende">
+        <section class="portada">
             <h2>
                 Con un productor asesor de seguros, es más seguro.
             </h2>
