--- a/pages/autogestion.html
+++ b/pages/autogestion.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autogestión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
@@ -38,7 +38,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item enlace" href="./cotizadores/vehic.html">Vehículo</a></li>
-                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a>
+                            </li>
                             <li><a class="dropdown-item enlace" href="./cotizador.html">Otro tipo de seguro</a></li>
                         </ul>
                     </li>
@@ -55,10 +56,10 @@
                     alt="Ir a Whatsapp" class="boton-wsp"></a>
         </div>
         <section class="portada">
-            <div class="formularios">
+            <div class="caja-formulario">
                 <div>
                     <h4>Formulario de Siniestros</h4>
-                    <form action="/procesar-siniestro" method="post" enctype="multipart/form-data"
+                    <form action="" class="formulario" method="post" enctype="multipart/form-data"
                         class="formulario siniestros">
                         <div class="mb-3">
                             <label for="fecha" class="form-label">Fecha del Siniestro (obligatorio)</label>
@@ -72,32 +73,33 @@
                             <label for="lugar" class="form-label">Lugar del Siniestro (obligatorio)</label>
                             <input class="form-control" type="text" id="lugar" name="lugar" required>
                         </div>
-                        <divdiv class="mb-3">
+                        <div class="mb-3">
                             <label for="forma_ocurrencia" class="form-label">Forma de Ocurrencia (obligatorio)</label>
-                            <textarea class="form-control" id="forma_ocurrencia" name="forma_ocurrencia" rows="3" required></textarea>
+                            <textarea class="form-control" id="forma_ocurrencia" name="forma_ocurrencia" rows="3"
+                                required></textarea>
                         </div>
                     </form>
-                </div>
-                <div>
                     <h5>Información del Asegurado</h5>
-                    <form action="/procesar-siniestro" method="post" enctype="multipart/form-data">
+                    <form class="formulario formulariocargardoc" action="/procesar-siniestro" method="post" enctype="multipart/form-data">
                         <div class="mb-3">
-                            <label for="cedula" class="form-label">Foto de la Cédula de Identificación Vehicular (obligatorio)</label>
-                            <input class="form-control"  type="file" id="cedula" name="cedula" accept="image/*" required>
+                            <label for="cedula" class="form-label">Foto de la Cédula de Identificación Vehicular
+                                (obligatorio)</label>
+                            <input class="form-control" type="file" id="cedula" name="cedula" accept="image/*" required>
                         </div>
                         <div class="mb-3">
-                            <label for="carnet_manejo" class="form-label">Foto del Carnet de Manejo (obligatorio)</label>
-                            <input class="form-control"  type="file" id="carnet_manejo" name="carnet_manejo" accept="image/*" required>
+                            <label for="carnet_manejo" class="form-label">Foto del Carnet de Manejo
+                                (obligatorio)</label>
+                            <input class="form-control" type="file" id="carnet_manejo" name="carnet_manejo"
+                                accept="image/*" required>
                         </div>
                         <div class="mb-3">
                             <label for="fotos_auto" class="form-label">Fotos del Auto Asegurado (obligatorio)</label>
-                            <input class="form-control"  type="file" id="fotos_auto" name="fotos_auto[]" accept="image/*" multiple required>
+                            <input class="form-control" type="file" id="fotos_auto" name="fotos_auto[]" accept="image/*"
+                                multiple required>
                         </div>
                     </form>
-                </div>
-                <div>
                     <h5>Información del Tercero (opcional)</h5>
-                    <form action="/procesar-siniestro" method="post" enctype="multipart/form-data"
+                    <form class="formulario" action="/procesar-siniestro" method="post" enctype="multipart/form-data"
                         class="formulario siniestros">
                         <div class="mb-3">
                             <label for="patente_tercero" class="form-label">Número de Patente</label>
@@ -116,11 +118,10 @@
                             <input class="form-control" type="text" id="conductor_tercero" name="conductor_tercero">
                         </div>
                     </form>
+                    <div class="enviar">
+                        <button type="submit" class="boton botongral">Enviar siniestro</button>
+                    </div>
                 </div>
-                <div class="enviar">
-                    <button type="submit" class="boton botongral">Enviar siniestro</button>
-                </div>
-            </div>
         </section>
     </main>
     <hr>
@@ -149,7 +150,9 @@
             <span>Powered by PG</span>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
