--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
@@ -38,7 +38,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item enlace" href="./cotizadores/vehic.html">Vehículo</a></li>
-                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a>
+                            </li>
                             <li><a class="dropdown-item enlace" href="./cotizador.html">Otro tipo de seguro</a></li>
                         </ul>
                     </li>
@@ -56,25 +57,25 @@
         </div>
 
         <section class="portada">
-            <div class="formularios">
+            <div class="caja-formulario">
                 <h4>Contáctanos</h4>
                 <h5>Completá tu información...</h5>
-                <form action="/procesar-formulario" method="post" class="form-contacto">
-                    <div class="label">
-                        <label for="nombre">Nombre:</label>
-                        <input type="text" id="nombre" name="nombre" required>
+                <form action="/procesar-formulario" method="post" class="formulario">
+                    <div class="mb-3">
+                        <label class="form-label" for="nombre">Nombre:</label>
+                        <input class="form-control" type="text" id="nombre" name="nombre" required>
                     </div>
                     <div class="mb-3">
-                        <label for="mail" class="form-label">Email</label>
-                        <input type="email" id="mail" class="form-control" placeholder="Correo Electrónico" required>
+                        <label class="form-label" for="mail">Email</label>
+                        <input class="form-control" type="email" id="mail" placeholder="Correo Electrónico" required>
                     </div>
-                    <div class="label">
-                        <label for="telefono">Teléfono:</label>
-                        <input type="tel" id="telefono" name="telefono">
+                    <div class="mb-3">
+                        <label class="form-label" for="telefono">Teléfono:</label>
+                        <input class="form-control" type="tel" id="telefono" name="telefono">
                     </div>
-                    <div class="label">
-                        <label for="mensaje">Mensaje:</label>
-                        <textarea id="mensaje" name="mensaje" required></textarea>
+                    <div class="mb-3">
+                        <label class="form-label" for="mensaje">Mensaje:</label>
+                        <textarea class="form-control" id="mensaje" name="mensaje" required></textarea>
                     </div>
                     <div>
                         <button type="submit" class="boton botongral">Enviar</button>
@@ -109,7 +110,9 @@
             <span>Powered by PG</span>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
