--- a/pages/cotizadores/accpers.html
+++ b/pages/cotizadores/accpers.html
@@ -51,7 +51,7 @@
     </header>
     <main>
         <section class="portada">
-            <div class="formularios">
+            <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Sobre tu profesión...</h5>
                 <form action="" class="formulario">
@@ -131,7 +131,7 @@
                     target="_blank">www.argentina.gob.ar/ssn</a>
             </div>
             <div>
-                <img src="../media/images/logo-ssn.png" alt="logo ssn" />
+                <img src="../../media/images/logo-ssn.png" alt="logo ssn" />
             </div>
         </section>
         <hr />
