Se aplican correcciones en reunion.html

--- a/pages/reunion.html
+++ b/pages/reunion.html
@@ -29,21 +29,21 @@
                         <a class="nav-link enlace" aria-current="page" href="./about.html">Quiénes somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./autogestion.html">Siniestros</a>
+                        <a class="nav-link enlace" href="./autogestion.html">Siniestros</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle enlace" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Cotizá tu seguro
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./cotizadores/vehic.html">Vehículo</a></li>
-                            <li><a class="dropdown-item" href="./cotizadores/vida.html">Vida y capitalización</a></li>
-                            <li><a class="dropdown-item" href="./cotizador.html">Otro tipo de seguro</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizadores/vehic.html">Vehículo</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizador.html">Otro tipo de seguro</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                        <a class="nav-link enlace" href="./contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -95,7 +95,7 @@
                         listos para discutir tus necesidades de seguros de manera detallada.</li>
                 </ul>
             </div>
-            <div class="formularios">
+            <div class="caja-formulario">
                 <h2>Formulario de Agendamiento:</h2>
                 <h3>Información Personal:</h3>
                 <form action="#" class="formulario">
