Correcciones en galería y grilla de index

--- a/index.html
+++ b/index.html
@@ -226,23 +226,23 @@
         <h2>Patricio Gallo</h2>
         <span>San Miguel de Tucumán, Argentina.</span> <br />
         <span>Email:
-          <a href="mailto:prgasesor@gmail.com">prgasesor@gmail.com</a></span>
+          <a class="enlace" href="mailto:prgasesor@gmail.com">prgasesor@gmail.com</a></span>
       </div>
       <div>
         <span>Servicios</span>
         <ul>
-          <li><a href="./pages/segper.html">Seguros personas</a></li>
-          <li><a href="./pages/segemp.html">Seguros empresas</a></li>
+          <li><a class="enlace" href="./pages/segper.html">Seguros personas</a></li>
+          <li><a class="enlace" href="./pages/segemp.html">Seguros empresas</a></li>
         </ul>
       </div>
       <div>
         <span>Redes sociales</span>
         <ul>
           <li>
-            <a href="https://www.instagram.com/prgasesor" target="_blank">Instagram</a>
+            <a class="enlace" href="https://www.instagram.com/prgasesor" target="_blank">Instagram</a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/patricio-roberto-gallo-58142720b/" target="_blank">Linkedin</a>
+            <a class="enlace" href="https://www.linkedin.com/in/patricio-roberto-gallo-58142720b/" target="_blank">Linkedin</a>
           </li>
         </ul>
       </div>
@@ -250,13 +250,13 @@
     <hr>
     <section class="foot-2">
       <div>
-        N° de matrícula SSN <br />
+        N° de matrícula SSN
         94338
       </div>
       <div>Servicio de Atención al asegurado</div>
-      <div>Departamento de orientación y asistencia</div>
+      <div>Departamento de Orientación y Asistencia al asegurado <a class="enlace" href="tel: 08006668400">0800-666-8400</a></div>
       <div>
-        <a href="https://www.argentina.gob.ar/superintendencia-de-seguros" target="_blank">www.argentina.gob.ar/ssn</a>
+        <a class="enlace" href="https://www.argentina.gob.ar/superintendencia-de-seguros" target="_blank">www.argentina.gob.ar/ssn</a>
       </div>
       <div>
         <img src="./media/images/logo-ssn.png" alt="logo ssn" />
