--- a/pages/cotizadores/vehic.html
+++ b/pages/cotizadores/vehic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cotizador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/styles.css">
 </head>
 
@@ -38,7 +38,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item enlace" href="../cotizadores/vehic.html">Vehículo</a></li>
-                            <li><a class="dropdown-item enlace" href="../cotizadores/vida.html">Vida y capitalización</a></li>
+                            <li><a class="dropdown-item enlace" href="../cotizadores/vida.html">Vida y
+                                    capitalización</a></li>
                             <li><a class="dropdown-item enlace" href="../cotizador.html">Otro tipo de seguro</a></li>
                         </ul>
                     </li>
@@ -54,60 +55,66 @@
             <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Datos de tu vehículo...</h5>
-                <form action="" class="formulario">
-                    <div class="mb-3">
-                        <label for="marca" class="form-label">Marca</label>
-                        <input type="text" id="marca" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="año" class="form-label">Año</label>
-                        <input type="number" id="año" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="modelo" class="form-label">Modelo</label>
-                        <input type="text" id="modelo" class="form-control">
-                    </div>
+                <form action="">
+                    <fieldset class="formulario">
+
+                        <div class="mb-3">
+                            <label for="marca" class="form-label">Marca</label>
+                            <input type="text" id="marca" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="año" class="form-label">Año</label>
+                            <input type="number" id="año" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="modelo" class="form-label">Modelo</label>
+                            <input type="text" id="modelo" class="form-control">
+                        </div>
+                    </fieldset>
                 </form>
 
                 <h5>Sobre vos...</h5>
-                <form action="" class="formulario">
-                    <div class="mb-3">
-                        <label for="tel" class="form-label">Teléfono</label>
-                        <input type="tel" id="tel" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="mail" class="form-label">Email</label>
-                        <input type="email" id="mail" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="provincia" class="form-label">Provincia</label>
-                        <select name="" id="provincia" class="form-control">
-                            <option value="">Tucumán</option>
-                            <option value="">Buenos Aires</option>
-                            <option value="">CABA</option>
-                            <option value="">Catamarca</option>
-                            <option value="">Chaco</option>
-                            <option value="">Chubut</option>
-                            <option value="">Córdoba</option>
-                            <option value="">Corrientes</option>
-                            <option value="">Entre Ríos</option>
-                            <option value="">Formosa</option>
-                            <option value="">Jujuy</option>
-                            <option value="">La Pampa</option>
-                            <option value="">La Rioja</option>
-                            <option value="">Mendoza</option>
-                            <option value="">Misiones</option>
-                            <option value="">Neuquén</option>
-                            <option value="">Río Negro</option>
-                            <option value="">Salta</option>
-                            <option value="">San Juan</option>
-                            <option value="">San Luis</option>
-                            <option value="">Santa Cruz</option>
-                            <option value="">Santa Fe</option>
-                            <option value="">Santiago del Estero</option>
-                            <option value="">Tierra del Fuego</option>
-                        </select>
-                    </div>
+                <form action="">
+                    <fieldset class="formulario">
+
+                        <div class="mb-3">
+                            <label for="tel" class="form-label">Teléfono</label>
+                            <input type="tel" id="tel" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="mail" class="form-label">Email</label>
+                            <input type="email" id="mail" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="provincia" class="form-label">Provincia</label>
+                            <select name="" id="provincia" class="form-control">
+                                <option value="">Tucumán</option>
+                                <option value="">Buenos Aires</option>
+                                <option value="">CABA</option>
+                                <option value="">Catamarca</option>
+                                <option value="">Chaco</option>
+                                <option value="">Chubut</option>
+                                <option value="">Córdoba</option>
+                                <option value="">Corrientes</option>
+                                <option value="">Entre Ríos</option>
+                                <option value="">Formosa</option>
+                                <option value="">Jujuy</option>
+                                <option value="">La Pampa</option>
+                                <option value="">La Rioja</option>
+                                <option value="">Mendoza</option>
+                                <option value="">Misiones</option>
+                                <option value="">Neuquén</option>
+                                <option value="">Río Negro</option>
+                                <option value="">Salta</option>
+                                <option value="">San Juan</option>
+                                <option value="">San Luis</option>
+                                <option value="">Santa Cruz</option>
+                                <option value="">Santa Fe</option>
+                                <option value="">Santiago del Estero</option>
+                                <option value="">Tierra del Fuego</option>
+                            </select>
+                        </div>
+                    </fieldset>
                 </form>
                 <div class="enviar">
                     <button type="submit" class="boton botongral">Solicitar cotización</button>
@@ -150,7 +157,9 @@
             <span>Powered by PG</span>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
