Aplicando transicion javascript en h1

--- a/pages/cotizadores/accpers.html
+++ b/pages/cotizadores/accpers.html
@@ -9,7 +9,8 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/styles.css">
     <link rel="shortcut icon" href="../../media/images/favicon.png" type="image/x-icon">
-    <meta name="description" content="Cotiza y compara seguros de accidentes personales. Protege tu bienestar y el de tus seres queridos, así como a tus empleados en situaciones de empleo informal. Asegura su seguridad con nuestra herramienta de cotización en línea.">
+    <meta name="description"
+        content="Cotiza y compara seguros de accidentes personales. Protege tu bienestar y el de tus seres queridos, así como a tus empleados en situaciones de empleo informal. Asegura su seguridad con nuestra herramienta de cotización en línea.">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
             <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Sobre tu profesión...</h5>
-                <form action="">
+                <form id="formularioAccidentesPersonales" action="">
                     <fieldset class="formulario">
 
                         <div class="mb-3">
@@ -153,9 +154,12 @@
             <span>Powered by PG</span>
         </section>
     </footer>
+    <script src="../../js/cotizador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="../../js/main.js"></script>
+
 
 </body>
 
