--- a/pages/autogestion.html
+++ b/pages/autogestion.html
@@ -9,7 +9,8 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../media/images/favicon.png" type="image/x-icon">
-    <meta name="description" content="Simplifica el proceso de reporte de siniestros con nuestro formulario en línea. Completa fácilmente la información necesaria para agilizar el proceso de reclamo. Brindamos asesoramiento y respaldo en cada paso para garantizar una gestión eficiente y rápida de tu siniestro.">
+    <meta name="description"
+        content="Simplifica el proceso de reporte de siniestros con nuestro formulario en línea. Completa fácilmente la información necesaria para agilizar el proceso de reclamo. Brindamos asesoramiento y respaldo en cada paso para garantizar una gestión eficiente y rápida de tu siniestro.">
 </head>
 
 <body>
@@ -163,6 +164,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="../js/main.js"></script>
 
 </body>
 
