--- a/pages/cotizadores/vehic.html
+++ b/pages/cotizadores/vehic.html
@@ -58,7 +58,7 @@
             <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Datos de tu vehículo...</h5>
-                <form id="datosVehiculoForm" action="">
+                <form id="formularioSeguroAutomotor" action="">
                     <fieldset class="formulario">
 
                         <div class="mb-3">
@@ -164,6 +164,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="../../js/main.js"></script>
+
 
 </body>
 
