--- a/pages/cotizadores/vida.html
+++ b/pages/cotizadores/vida.html
@@ -61,7 +61,7 @@
                 <h4>Completá...</h4>
                 <h5>Sobre tu profesión...</h5>
 
-                <form action="">
+                <form id="formularioVidaCapitalizacion" action="">
                     <fieldset class="formulario">
                         <div class="mb-3">
                             <label for="actividad" class="form-label">Actividad</label>
@@ -155,9 +155,11 @@
             <span>Powered by PG</span>
         </section>
     </footer>
+    <script src="../../js/cotizador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="../../js/main.js"></script>
 
 </body>
 
