--- a/pages/segper.html
+++ b/pages/segper.html
@@ -9,7 +9,8 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../media/images/logo.png" type="image/x-icon">
-    <meta name="description" content="Explora una variedad de seguros personales con Patricio Gallo. Encuentra la cobertura perfecta para tus necesidades y protege lo que más importa.">
+    <meta name="description"
+        content="Explora una variedad de seguros personales con Patricio Gallo. Encuentra la cobertura perfecta para tus necesidades y protege lo que más importa.">
 </head>
 
 <body>
@@ -40,7 +41,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item enlace" href="./cotizadores/vehic.html">Vehículo</a></li>
-                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a></li>
+                            <li><a class="dropdown-item enlace" href="./cotizadores/vida.html">Vida y capitalización</a>
+                            </li>
                             <li><a class="dropdown-item enlace" href="./cotizador.html">Otro tipo de seguro</a></li>
                         </ul>
                     </li>
@@ -86,7 +88,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
