--- a/pages/cotizadores/accpers.html
+++ b/pages/cotizadores/accpers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -68,7 +68,7 @@
                         <div class="mb-3">
                             <label for="cantidad-personas-ap" class="form-label">Cantidad de personas aseguradas
                             </label>
-                            <input type="number" id="cantidad-personas-ap" class="form-control">
+                            <input type="number" id="cantidadPersonasAp" class="form-control">
                         </div>
                     </fieldset>
                 </form>
@@ -116,7 +116,7 @@
                     </fieldset>
                 </form>
                 <div class="enviar">
-                    <button type="submit" class="boton botongral">Solicitar cotización</button>
+                    <button type="submit" onclick="cotizarSeguro()" class="boton botongral">Solicitar cotización</button>
                 </div>
                 <p>Tené en cuenta que no recibirás una cotización automática, sino que serás contactado por un
                     especialista para obtener un asesoramiento preciso.
